--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "mime": "^1.3.4",
     "node-base64-image": "^1.0.1",
+    "request": "^2.72.0",
     "shelljs": "^0.7.0"
   },
   "devDependencies": {},
